Update 연구윤리 및 보고서 쓰기  특강(필기).md

--- a/일지/연구윤리 및 보고서 쓰기  특강(필기).md
+++ b/일지/연구윤리 및 보고서 쓰기  특강(필기).md
@@ -26,7 +26,7 @@
 	• 연구팀간지식공유및협업의매개체
 
 
-![[Pasted image 20250716143450.png]]
+[이미지](Sabermetrics_research/resources/image/Pasted image 20250716143450.png)
 peer-review -> 같은 분야의 연구자가 확인하는것
 
 연구노트가 필요한 이유
