--- a/일지/25-07-31.md
+++ b/일지/25-07-31.md
@@ -3,4 +3,4 @@
 시온 : 깃허브에 들어감, 연구관련 야구공부 (다른 팀원의 이야기를 적은 내용)\
 동현 : 깃허브에 참고자료 추가, 로지스틱 회귀 분석 공부\
 인우 : 깃허브에 팀원들을 추가하고, 로지스틱 회귀분석, 깃(git)을 공부함\
-석현 : 깃허브에 기초 베타버전 코드를 제작함\
+석현 : 깃허브에 기초 베타버전 코드를 제작함
