--- a/inspection.ipynb
+++ b/inspection.ipynb
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "id": "4f004604",
    "metadata": {},
    "outputs": [],
@@ -936,15 +936,478 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "0213e3cf",
    "metadata": {},
    "outputs": [],
    "source": [
+    "cnt = 0\n",
     "for i, x in df_cleanna.iterrows():\n",
     "    if any([x[l] not in dir_num for l in dir_labels]):\n",
-    "        print(i)"
+    "        print(i)\n",
+    "        cnt += 1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "2f911a41",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'N' in dir_num"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "5e17894a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'A' in dir_num"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "b8edeb0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\siw20\\AppData\\Local\\Temp\\ipykernel_19768\\335843237.py:8: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  df_dir2num[l] = df_dir2num[l].replace(dir_num)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_dir2num = df_cleanna.copy()\n",
+    "# for i,x in df_dir2num.iterrows():\n",
+    "#     for l in dir_labels:\n",
+    "#         # x[l] = dir_num[x[l]]\n",
+    "#         x[l] = 0\n",
+    "\n",
+    "for l in dir_labels:\n",
+    "    df_dir2num[l] = df_dir2num[l].replace(dir_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "1bf9e28d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>MinTemp</th>\n",
+       "      <th>MaxTemp</th>\n",
+       "      <th>Rainfall</th>\n",
+       "      <th>Evaporation</th>\n",
+       "      <th>Sunshine</th>\n",
+       "      <th>WindGustDir</th>\n",
+       "      <th>WindGustSpeed</th>\n",
+       "      <th>WindDir9am</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Humidity9am</th>\n",
+       "      <th>Humidity3pm</th>\n",
+       "      <th>Pressure9am</th>\n",
+       "      <th>Pressure3pm</th>\n",
+       "      <th>Cloud9am</th>\n",
+       "      <th>Cloud3pm</th>\n",
+       "      <th>Temp9am</th>\n",
+       "      <th>Temp3pm</th>\n",
+       "      <th>RainToday</th>\n",
+       "      <th>RainTomorrow</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6049</th>\n",
+       "      <td>2009-01-01</td>\n",
+       "      <td>Cobar</td>\n",
+       "      <td>17.9</td>\n",
+       "      <td>35.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>12.3</td>\n",
+       "      <td>202.5</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>67.5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>1006.3</td>\n",
+       "      <td>1004.4</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>26.6</td>\n",
+       "      <td>33.4</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6050</th>\n",
+       "      <td>2009-01-02</td>\n",
+       "      <td>Cobar</td>\n",
+       "      <td>18.4</td>\n",
+       "      <td>28.9</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14.8</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>157.5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1012.9</td>\n",
+       "      <td>1012.1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>20.3</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6052</th>\n",
+       "      <td>2009-01-04</td>\n",
+       "      <td>Cobar</td>\n",
+       "      <td>19.4</td>\n",
+       "      <td>37.6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>10.8</td>\n",
+       "      <td>10.6</td>\n",
+       "      <td>22.5</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>22.5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1012.3</td>\n",
+       "      <td>1009.2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>28.7</td>\n",
+       "      <td>34.9</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6053</th>\n",
+       "      <td>2009-01-05</td>\n",
+       "      <td>Cobar</td>\n",
+       "      <td>21.9</td>\n",
+       "      <td>38.4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11.4</td>\n",
+       "      <td>12.2</td>\n",
+       "      <td>292.5</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>292.5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1012.7</td>\n",
+       "      <td>1009.1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>29.1</td>\n",
+       "      <td>35.6</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6054</th>\n",
+       "      <td>2009-01-06</td>\n",
+       "      <td>Cobar</td>\n",
+       "      <td>24.2</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11.2</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>292.5</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>315.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>1010.7</td>\n",
+       "      <td>1007.4</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>33.6</td>\n",
+       "      <td>37.6</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142298</th>\n",
+       "      <td>2017-06-20</td>\n",
+       "      <td>Darwin</td>\n",
+       "      <td>19.3</td>\n",
+       "      <td>33.4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>67.5</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>135.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>1013.9</td>\n",
+       "      <td>1010.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>24.5</td>\n",
+       "      <td>32.3</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142299</th>\n",
+       "      <td>2017-06-21</td>\n",
+       "      <td>Darwin</td>\n",
+       "      <td>21.2</td>\n",
+       "      <td>32.6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>135.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>1014.6</td>\n",
+       "      <td>1011.2</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>24.8</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142300</th>\n",
+       "      <td>2017-06-22</td>\n",
+       "      <td>Darwin</td>\n",
+       "      <td>20.7</td>\n",
+       "      <td>32.8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>1015.3</td>\n",
+       "      <td>1011.8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>24.8</td>\n",
+       "      <td>32.1</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142301</th>\n",
+       "      <td>2017-06-23</td>\n",
+       "      <td>Darwin</td>\n",
+       "      <td>19.5</td>\n",
+       "      <td>31.8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>10.6</td>\n",
+       "      <td>112.5</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>135.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>1014.9</td>\n",
+       "      <td>1010.7</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>24.8</td>\n",
+       "      <td>29.2</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142302</th>\n",
+       "      <td>2017-06-24</td>\n",
+       "      <td>Darwin</td>\n",
+       "      <td>20.2</td>\n",
+       "      <td>31.7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>10.7</td>\n",
+       "      <td>67.5</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>67.5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>1013.9</td>\n",
+       "      <td>1009.7</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>25.4</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>56420 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Date Location  MinTemp  MaxTemp  Rainfall  Evaporation  \\\n",
+       "6049    2009-01-01    Cobar     17.9     35.2       0.0         12.0   \n",
+       "6050    2009-01-02    Cobar     18.4     28.9       0.0         14.8   \n",
+       "6052    2009-01-04    Cobar     19.4     37.6       0.0         10.8   \n",
+       "6053    2009-01-05    Cobar     21.9     38.4       0.0         11.4   \n",
+       "6054    2009-01-06    Cobar     24.2     41.0       0.0         11.2   \n",
+       "...            ...      ...      ...      ...       ...          ...   \n",
+       "142298  2017-06-20   Darwin     19.3     33.4       0.0          6.0   \n",
+       "142299  2017-06-21   Darwin     21.2     32.6       0.0          7.6   \n",
+       "142300  2017-06-22   Darwin     20.7     32.8       0.0          5.6   \n",
+       "142301  2017-06-23   Darwin     19.5     31.8       0.0          6.2   \n",
+       "142302  2017-06-24   Darwin     20.2     31.7       0.0          5.6   \n",
+       "\n",
+       "        Sunshine  WindGustDir  WindGustSpeed  WindDir9am  ...  Humidity9am  \\\n",
+       "6049        12.3        202.5           48.0        67.5  ...         20.0   \n",
+       "6050        13.0        180.0           37.0       157.5  ...         30.0   \n",
+       "6052        10.6         22.5           46.0        22.5  ...         42.0   \n",
+       "6053        12.2        292.5           31.0       292.5  ...         37.0   \n",
+       "6054         8.4        292.5           35.0       315.0  ...         19.0   \n",
+       "...          ...          ...            ...         ...  ...          ...   \n",
+       "142298      11.0         67.5           35.0       135.0  ...         63.0   \n",
+       "142299       8.6         90.0           37.0       135.0  ...         56.0   \n",
+       "142300      11.0         90.0           33.0        90.0  ...         46.0   \n",
+       "142301      10.6        112.5           26.0       135.0  ...         62.0   \n",
+       "142302      10.7         67.5           30.0        67.5  ...         73.0   \n",
+       "\n",
+       "        Humidity3pm  Pressure9am  Pressure3pm  Cloud9am  Cloud3pm  Temp9am  \\\n",
+       "6049           13.0       1006.3       1004.4       2.0       5.0     26.6   \n",
+       "6050            8.0       1012.9       1012.1       1.0       1.0     20.3   \n",
+       "6052           22.0       1012.3       1009.2       1.0       6.0     28.7   \n",
+       "6053           22.0       1012.7       1009.1       1.0       5.0     29.1   \n",
+       "6054           15.0       1010.7       1007.4       1.0       6.0     33.6   \n",
+       "...             ...          ...          ...       ...       ...      ...   \n",
+       "142298         32.0       1013.9       1010.5       0.0       1.0     24.5   \n",
+       "142299         28.0       1014.6       1011.2       7.0       0.0     24.8   \n",
+       "142300         23.0       1015.3       1011.8       0.0       0.0     24.8   \n",
+       "142301         58.0       1014.9       1010.7       1.0       1.0     24.8   \n",
+       "142302         32.0       1013.9       1009.7       6.0       5.0     25.4   \n",
+       "\n",
+       "        Temp3pm  RainToday  RainTomorrow  \n",
+       "6049       33.4         No            No  \n",
+       "6050       27.0         No            No  \n",
+       "6052       34.9         No            No  \n",
+       "6053       35.6         No            No  \n",
+       "6054       37.6         No            No  \n",
+       "...         ...        ...           ...  \n",
+       "142298     32.3         No            No  \n",
+       "142299     32.0         No            No  \n",
+       "142300     32.1         No            No  \n",
+       "142301     29.2         No            No  \n",
+       "142302     31.0         No            No  \n",
+       "\n",
+       "[56420 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_dir2num"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82110ded",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
