--- a/inspection.ipynb
+++ b/inspection.ipynb
@@ -2759,8 +2759,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "1ff152e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 3062 entries, 139111 to 142302\n",
+      "Data columns (total 23 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   Date           3062 non-null   object \n",
+      " 1   Location       3062 non-null   object \n",
+      " 2   MinTemp        3062 non-null   float64\n",
+      " 3   MaxTemp        3062 non-null   float64\n",
+      " 4   Rainfall       3062 non-null   float64\n",
+      " 5   Evaporation    3062 non-null   float64\n",
+      " 6   Sunshine       3062 non-null   float64\n",
+      " 7   WindGustDir    3062 non-null   float64\n",
+      " 8   WindGustSpeed  3062 non-null   float64\n",
+      " 9   WindDir9am     3062 non-null   float64\n",
+      " 10  WindDir3pm     3062 non-null   float64\n",
+      " 11  WindSpeed9am   3062 non-null   float64\n",
+      " 12  WindSpeed3pm   3062 non-null   float64\n",
+      " 13  Humidity9am    3062 non-null   float64\n",
+      " 14  Humidity3pm    3062 non-null   float64\n",
+      " 15  Pressure9am    3062 non-null   float64\n",
+      " 16  Pressure3pm    3062 non-null   float64\n",
+      " 17  Cloud9am       3062 non-null   float64\n",
+      " 18  Cloud3pm       3062 non-null   float64\n",
+      " 19  Temp9am        3062 non-null   float64\n",
+      " 20  Temp3pm        3062 non-null   float64\n",
+      " 21  RainToday      3062 non-null   int64  \n",
+      " 22  RainTomorrow   3062 non-null   int64  \n",
+      "dtypes: float64(19), int64(2), object(2)\n",
+      "memory usage: 574.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_darwin.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7b2ee7c",
    "metadata": {},
    "outputs": [],
    "source": []
