--- a/saber.ipynb
+++ b/saber.ipynb
@@ -394,7 +394,20 @@
    "id": "ed661eaf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "model = LogisticRegression()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "619793e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train, x_test, y_train, y_test = "
+   ]
   }
  ],
  "metadata": {
