--- a/saber.ipynb
+++ b/saber.ipynb
@@ -396,7 +396,10 @@
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
-    "model = LogisticRegression()"
+    "model = LogisticRegression()\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X = df[['타겟_열_이름']] # 독립변수\n",
+    "Y = df['열'].map({'값': 0, '갑': 1})"
    ]
   },
   {
@@ -406,7 +409,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train, x_test, y_train, y_test = "
+    "x_train, x_test, y_train, y_test = train_test_split(X, Y, test_size = 0.2, random_state = 0)"
    ]
   }
  ],
