train test split

--- a/saber.ipynb
+++ b/saber.ipynb
@@ -390,26 +390,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "ed661eaf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       0\n",
+       "1       0\n",
+       "2       0\n",
+       "3       0\n",
+       "4       0\n",
+       "       ..\n",
+       "3057    0\n",
+       "3058    0\n",
+       "3059    0\n",
+       "3060    0\n",
+       "3061    0\n",
+       "Name: RainTomorrow, Length: 3062, dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
-    "model = LogisticRegression()\n",
     "from sklearn.model_selection import train_test_split\n",
-    "X = df[['타겟_열_이름']] # 독립변수\n",
-    "Y = df['열'].map({'값': 0, '갑': 1})"
+    "\n",
+    "model = LogisticRegression()\n",
+    "X = df.iloc[:, 3:-1] # 독립변수\n",
+    "# Y = df['열'].map({'값': 0, '갑': 1})\n",
+    "Y = df.iloc[:, -1]\n",
+    "Y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "619793e8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train, x_test, y_train, y_test = train_test_split(X, Y, test_size = 0.2, random_state = 0)"
+    "x_train, x_test, y_train, y_test = train_test_split(X, Y, test_size = 0.2, random_state = 0)\n",
+    "# train_test_split()"
    ]
   },
   {
