전체 데이터에서 로지스틱

--- a/inspection.ipynb
+++ b/inspection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "id": "c7c6b541",
    "metadata": {},
    "outputs": [
@@ -376,20 +376,20 @@
        "[145460 rows x 23 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv('./inputs/weatherAUS (testdata).csv')\n",
+    "df = pd.read_csv('./datasets/weatherAUS (testdata).csv')\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "6a6030e6",
    "metadata": {},
    "outputs": [
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "id": "533b19b1",
    "metadata": {},
    "outputs": [
@@ -446,7 +446,7 @@
        "np.int64(3261)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "id": "b371a8fe",
    "metadata": {},
    "outputs": [
@@ -467,7 +467,7 @@
        "np.int64(3267)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "id": "6005253d",
    "metadata": {},
    "outputs": [
@@ -852,7 +852,7 @@
        "[56420 rows x 23 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "id": "e514285a",
    "metadata": {},
    "outputs": [
@@ -874,7 +874,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "id": "64292826",
    "metadata": {},
    "outputs": [
@@ -910,7 +910,7 @@
        " 'WSW'}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "id": "4f004604",
    "metadata": {},
    "outputs": [],
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "0213e3cf",
    "metadata": {},
    "outputs": [],
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "2f911a41",
    "metadata": {},
    "outputs": [
@@ -960,7 +960,7 @@
        "True"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "5e17894a",
    "metadata": {},
    "outputs": [
@@ -981,7 +981,7 @@
        "False"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 35,
    "id": "b8edeb0d",
    "metadata": {},
    "outputs": [
@@ -1000,7 +1000,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\siw20\\AppData\\Local\\Temp\\ipykernel_19768\\335843237.py:8: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\siw20\\AppData\\Local\\Temp\\ipykernel_33340\\335843237.py:8: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df_dir2num[l] = df_dir2num[l].replace(dir_num)\n"
      ]
     }
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 36,
    "id": "1bf9e28d",
    "metadata": {},
    "outputs": [
@@ -1392,7 +1392,7 @@
        "[56420 rows x 23 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1403,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 37,
    "id": "82110ded",
    "metadata": {},
    "outputs": [
@@ -1411,9 +1411,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\siw20\\AppData\\Local\\Temp\\ipykernel_19768\\1951554839.py:2: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\siw20\\AppData\\Local\\Temp\\ipykernel_33340\\1951554839.py:2: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df_cleaned['RainToday'] = df_cleaned['RainToday'].replace({'Yes': 1, 'No': 0})\n",
-      "C:\\Users\\siw20\\AppData\\Local\\Temp\\ipykernel_19768\\1951554839.py:3: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\siw20\\AppData\\Local\\Temp\\ipykernel_33340\\1951554839.py:3: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df_cleaned['RainTomorrow'] = df_cleaned['RainTomorrow'].replace({'Yes': 1, 'No': 0})\n"
      ]
     }
@@ -1426,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 38,
    "id": "378b93fe",
    "metadata": {},
    "outputs": [
@@ -1800,7 +1800,7 @@
        "[56420 rows x 23 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1811,7 +1811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 39,
    "id": "8880efaa",
    "metadata": {},
    "outputs": [
@@ -1858,7 +1858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 40,
    "id": "e58433aa",
    "metadata": {},
    "outputs": [
@@ -2232,7 +2232,7 @@
        "[1690 rows x 23 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2244,7 +2244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 41,
    "id": "d5d237e7",
    "metadata": {},
    "outputs": [
@@ -2281,7 +2281,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2292,7 +2292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 42,
    "id": "6a03a027",
    "metadata": {},
    "outputs": [
@@ -2352,7 +2352,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2363,7 +2363,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 46,
+   "id": "e4fc3657",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cleaned.to_csv('./datasets/weatherAUS_processed (testdata).csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "id": "dfc50b37",
    "metadata": {},
    "outputs": [
@@ -2737,7 +2747,7 @@
        "[3062 rows x 23 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2749,17 +2759,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 44,
    "id": "bca247b2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_darwin.to_csv('./inputs/darwin (testdata).csv')"
+    "df_darwin.to_csv('./datasets/weatherAUS_processed (testdata).csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 45,
    "id": "1ff152e8",
    "metadata": {},
    "outputs": [
