--- a/saber.ipynb
+++ b/saber.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "1d35eb95",
    "metadata": {},
    "outputs": [
@@ -384,7 +384,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('./datasets/weatherAUS_processed (testdata).csv')\n",
+    "df = pd.read_csv('./datasets/darwin (testdata).csv')\n",
     "df"
    ]
   },
