--- a/test_sources/logistic_test.ipynb
+++ b/test_sources/logistic_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "c81f8f24",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "bdcf2118",
    "metadata": {},
    "outputs": [
@@ -388,7 +388,7 @@
        "[22050 rows x 33 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "5f5dd256",
    "metadata": {},
    "outputs": [
@@ -748,7 +748,7 @@
        "[1875 rows x 25 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,32 +760,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "623fa26f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1135 entries, 740 to 1874\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   AVG     1135 non-null   float64\n",
+      " 1   G       1135 non-null   int64  \n",
+      " 2   PA      1135 non-null   int64  \n",
+      " 3   AB      1135 non-null   int64  \n",
+      " 4   H       1135 non-null   int64  \n",
+      " 5   2B      1135 non-null   int64  \n",
+      " 6   3B      1135 non-null   int64  \n",
+      " 7   HR      1135 non-null   int64  \n",
+      " 8   RBI     1135 non-null   int64  \n",
+      " 9   R       1135 non-null   float64\n",
+      " 10  TB      1135 non-null   float64\n",
+      " 11  SAC     1135 non-null   float64\n",
+      " 12  SF      1135 non-null   float64\n",
+      "dtypes: float64(5), int64(8)\n",
+      "memory usage: 115.4 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "model = LogisticRegression()\n",
+    "X = df2.drop(columns=['선수명', '순위', '팀명', '장', '연도', 'SB', 'CS', 'BB', 'HBP', 'SO', 'GDP', 'E']).loc[740:, :] # 독립변수\n",
+    "\n",
+    "# Y = df['열'].map({'값': 0, '갑': 1})\n",
+    "Y = df2['AVG'].loc[740:]\n",
+    "X.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "dac072dc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_players = 10    # 타자 수\n",
-    "at_bats = 50      # 타석 수\n",
-    "\n",
-    "players = {}\n",
-    "for i in range(n_players):\n",
-    "    players[i] = {\n",
-    "        'OBP': np.random.uniform(0.25, 0.45, at_bats),\n",
-    "        'SLG': np.random.uniform(0.30, 0.60, at_bats),\n",
-    "        'BABIP': np.random.uniform(0.25, 0.4, at_bats),\n",
-    "        'BB_K': np.random.uniform(0.2, 1.5, at_bats),\n",
-    "        'ISO': np.random.uniform(0.05, 0.25, at_bats),\n",
-    "    }\n",
-    "\n",
     "# 실제 안타 여부 생성 (베르누이)\n",
-    "true_coef = np.array([2.0, 3.0, 2.5, 1.0, 1.5])\n",
-    "bias = -3.0\n",
-    "for i in range(n_players):\n",
-    "    X = np.column_stack([players[i]['OBP'], players[i]['SLG'], players[i]['BABIP'], players[i]['BB_K'], players[i]['ISO']])\n",
-    "    linear = np.dot(X, true_coef) + bias\n",
-    "    prob = 1 / (1 + np.exp(-linear))\n",
-    "    players[i]['hit'] = np.random.binomial(1, prob)\n",
+    "# true_coef = np.array([2.0, 3.0, 2.5, 1.0, 1.5])\n",
+    "# bias = -3.0\n",
+    "# for i in range(X):\n",
+    "#     X = np.column_stack([X[i]['OBP'], X[i]['SLG'],X [i]['BABIP'], X[i]['BB_K'], X[i]['ISO']])\n",
+    "#     linear = np.dot(X, true_coef) + bias\n",
+    "#     prob = 1 / (1 + np.exp(-linear))\n",
+    "#     Y = np.random.binomial(1, prob)\n",
     "\n",
     "def sigmoid(z):\n",
     "    return 1 / (1 + np.exp(-z))\n",
