added kbo cleaner file

--- a/dataset_cleaner/MLB_cleaner.ipynb
+++ b/dataset_cleaner/MLB_cleaner.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9a6d9bab",
    "metadata": {},
    "outputs": [],
    "source": [
     "rlt = []\n",
-    "with open('./datasets/MLB_dataset.csv', 'r') as file:\n",
+    "with open('../datasets/MLB_dataset.csv', 'r') as file:\n",
     "    for line in file:\n",
     "        data = line.strip().split(',')\n",
     "        if len(data) < 2:  continue\n",
